--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Alexander L. Hayes</title>
-		<!-- Linking to main.css -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hello World.</h1>
-				<p>Following Jonathan McGlone's guide at the moment. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:alexander@batflyer.net">email</a></li>
-        		<li><a href="https://github.com/batflyer">github.com/batflyer</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Alexander L. Hayes
+---
+<div class="blurb">
+	<h1>Hi there, I'm Alexander L. Hayes!</h1>
+	<p>Following Jonathan McGlone's guide at the moment. <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
