went through a few more tutorial threads, set up Jekyll on my local machine to test updates.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 layout: default
 title: Alexander L. Hayes
 ---
+<!--
 <div class="blurb">
-	<h1>Hi there, I'm Alexander L. Hayes!</h1>
-	<p>Following Jonathan McGlone's guide at the moment. <a href="/about">Read more about my life...</a></p>
-</div><!-- /.blurb -->
+-->
+<h1>Hi there, I'm Alexander L. Hayes!</h1>
+<p>Following Jonathan McGlone's guide at the moment. <a href="/about">Read more about my life...</a></p>
+<!--
+</div>
+-->
