updated css, syntax highlighting, and navigation

--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 ---
 layout: default
 title: Alexander L. Hayes
+description: Homepage for Alexander L. Hayes, Computer Science PhD Student focusing on Machine Learning.
 ---
+<h1>Alexander L. Hayes</h1>
+<p>Following the setup section of Jonathan McGlone's guide and working getting Bootstrap+Jekyll set up.</p>
+
+<!--
 <div class="blurb">
-  <h1>Hi there, I'm Alexander L. Hayes!</h1>
-  <p>Following Jonathan McGlone's guide at the moment. <a href="/about">Read more about my life...</a></p>
 </div>
+-->
