outline for cv, cleaned up some more css.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,4 @@ layout: default
 title: Alexander L. Hayes
 description: Homepage for Alexander L. Hayes, Computer Science PhD Student focusing on Machine Learning.
 ---
-<h1>Alexander L. Hayes</h1>
-<p>Following the setup section of Jonathan McGlone's guide and working getting Bootstrap+Jekyll set up.</p>
-
-<!--
-<div class="blurb">
-</div>
--->
+<p>Computer Science Ph.D. Student at Indiana University. My interests are in machine learning, distributed computing, shell scripting, and Python.</p>
