--- a/index.html
+++ b/index.html
@@ -3,4 +3,10 @@ layout: default
 title: Alexander L. Hayes
 description: Homepage for Alexander L. Hayes, Computer Science PhD Student focusing on Machine Learning.
 ---
-<p>Computer Science Ph.D. Student at Indiana University. My interests are in machine learning, distributed computing, shell scripting, and Python.</p>
+
+<p>Computer Science Ph.D. Student at University of Texas at Dallas, advised by Professor Sriraam Natarajan. My interests are in machine learning and its applications, as well as shell scripting, Python, and Fedora Linux.</p>
+<p>This semester I am a teaching assistant for Automata Theory. Side projects can be found on my GitHub.</p>
+
+<ul class="icons">
+  <li><a href="https://github.com/batflyer" class="icon round fa-github"><span class="label">GitHub</span></a></li>
+</ul>
