Changing the layout. Trying to get icons working.

--- a/index.html
+++ b/index.html
@@ -10,3 +10,5 @@ description: Homepage for Alexander L. Hayes, Computer Science PhD Student focus
 <ul class="icons">
   <li><a href="https://github.com/batflyer" class="icon round fa-github"><span class="label">GitHub</span></a></li>
 </ul>
+
+<a href="https://github.com/batflyer" class="icon round fa-github"><span class="label">GitHub</span></a>
