Adjusted the image and added it to the home page.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@ title: Alexander L. Hayes
 description: Homepage for Alexander L. Hayes, Computer Science PhD Student focusing on Machine Learning.
 ---
 
-<p>Computer Science Ph.D. Student at University of Texas at Dallas, advised by Professor Sriraam Natarajan. My interests are in machine learning and its applications, as well as shell scripting, Python, and Fedora Linux.</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-12"><img src="/img/AlexanderLHayes.jpg" alt="Portrait of Alexander L. Hayes" style="border-radius: 45%; display: block; margin: auto; padding-top: 2em; padding-bottom: 2em;"/></div>
+  </div>
 
-<p>This semester I am a teaching assistant for Automata Theory. Side projects can be found on my GitHub.</p>
+  <div class="row">
+    <div class="col-md-12">
+      <p>Computer Science Ph.D. Student at University of Texas at Dallas, advised by Professor Sriraam Natarajan. My interests are in machine learning and its applications, as well as shell scripting, Python, and Fedora Linux.</p>
+      <p>This semester I am a teaching assistant for Automata Theory. Side projects can be found on my GitHub.</p>
+    </div>
+  </div>
+</div>
