Updating CV with some information and tweaking the explanations in the posts.

--- a/cv/index.html
+++ b/cv/index.html
@@ -3,8 +3,33 @@ layout: default
 title: CV | Alexander L. Hayes
 description: Curriculum Vitae (CV) for Alexander L. Hayes
 ---
+
 <h1>{{ site.title }}</h1>
-<p>School of Informatics and Computing<br>
-Indiana University, Bloomington<br>
-919 E. 13th Street<br>
-Bloomington, IN 47401</p>
+<p>Department of Computer Science<br>
+  Erik Jonsson School of Engineering & Computer Science<br>
+  The University of Texas at Dallas<br>
+  800 W. Campbell; MS EC31<br>
+  Richardson, TX 75080 USA
+</p>
+
+<h2>Technical Skills</h2>
+<p>Python, Shell Scripting (Bash), Linux/Unix, C, Racket/Scheme, Git</p>
+
+<h2>Education</h2>
+<p>Doctor of Philosophy (Ph.D.) Computer Science<br>
+  Department of Computer Science<br>
+  Erik Jonnson School of Engineering & Computer Science<br>
+  The University of Texas at Dallas
+</p>
+<p>Bachelor of Science Computer Science<br>
+  Security Minor (Graduated 2017, GPA: 3.5 Cumulative)<br>
+  School of Informatics, Computing, and Engineering<br>
+  Bloomington, IN
+</p>
+
+<h2>Experience</h2>
+
+<h2>Publications</h2>
+<ol>
+  <li>Alexander L. Hayes, Mayukh Das, Phillip Odom, and Sriraam Natarajan. 2017. <i>User Friendly Automatic Construction of Background Knowledge: Mode Construction from ER Diagrams</i>. Knowledge Capture Conference (K-CAP '17). December 4-6, 2017, Austin, TX, USA. DOI:https://doi.org/10.1145/3148011.3148027</li>
+</ol>
