Changing the footer, cv, header, default layout, blog, and css.

--- a/cv/index.html
+++ b/cv/index.html
@@ -5,7 +5,8 @@ description: Curriculum Vitae (CV) for Alexander L. Hayes
 ---
 
 <h1>{{ site.title }}</h1>
-<p>Department of Computer Science<br>
+<p class="cv"><span class="obfuscate">ude.sallad@seyaH.rednaxelA | ten.reylftab@rednaxela</span></p>
+<p class="cv">Department of Computer Science<br>
   Erik Jonsson School of Engineering & Computer Science<br>
   The University of Texas at Dallas<br>
   800 W. Campbell; MS EC31<br>
@@ -13,23 +14,24 @@ description: Curriculum Vitae (CV) for Alexander L. Hayes
 </p>
 
 <h2>Technical Skills</h2>
-<p>Python, Shell Scripting (Bash), Linux/Unix, C, Racket/Scheme, Git</p>
+<p class="cv">Python, Shell Scripting, Linux/Unix, C, Racket/Scheme, Git</p>
 
 <h2>Education</h2>
-<p>Doctor of Philosophy (Ph.D.) Computer Science<br>
-  Department of Computer Science<br>
-  Erik Jonnson School of Engineering & Computer Science<br>
-  The University of Texas at Dallas
-</p>
-<p>Bachelor of Science Computer Science<br>
-  Security Minor (Graduated 2017, GPA: 3.5 Cumulative)<br>
-  School of Informatics, Computing, and Engineering<br>
-  Bloomington, IN
-</p>
+<ul class="cv">
+  <li><b>Doctor of Philosophy (Ph.D.) Computer Science</b><br>
+    Erik Jonnson School of Engineering & Computer Science<br>
+    The University of Texas at Dallas, Richardson, TX
+  </li>
+  <li><b>Bachelor of Science (B.S.) Computer Science</b><br>
+    <i>Security Informatics Minor</i>, Class of 2017, GPA: 3.5 Cumulative<br>
+    School of Informatics, Computing, and Engineering<br>
+    Indiana University, Bloomington, IN
+  </li>
+</ul>
 
 <h2>Experience</h2>
 
 <h2>Publications</h2>
-<ol>
+<ol class="cv">
   <li>Alexander L. Hayes, Mayukh Das, Phillip Odom, and Sriraam Natarajan. 2017. <i>User Friendly Automatic Construction of Background Knowledge: Mode Construction from ER Diagrams</i>. Knowledge Capture Conference (K-CAP '17). December 4-6, 2017, Austin, TX, USA. DOI:https://doi.org/10.1145/3148011.3148027</li>
 </ol>
