--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ description: Homepage for Alexander L. Hayes, Computer Science PhD Student focus
 
   <div class="row">
     <div class="col-md-12">
-      <p>Computer Science Ph.D. Student at The University of Texas at Dallas, advised by <a href="http://utdallas.edu/~sxn177430/">Professor Sriraam Natarajan</a>. My interests are in machine learning and its applications; as well as systems, open-source development, and theory of computation. I believe that open development and explainable decision-making systems is a great starting point for building trust in artificial intelligence.</p>
+      <p>Computer Science Ph.D. Student at The University of Texas at Dallas, advised by <a href="http://utdallas.edu/~sxn177430/">Professor Sriraam Natarajan</a>. My interests are in machine learning and its applications; as well as systems, open-source development, and theory of computation. I believe that open development and explainable decision-making systems are great starting points for building trust in artificial intelligence.</p>
       <h3>Updates</h3>
       <ul>
 	<li>This semester I am a teaching assistant for Automata Theory.</li>
