Removing the house icon and making the portrait responsive.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ description: Homepage for Alexander L. Hayes, Computer Science PhD Student focus
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-12"><img src="/img/AlexanderLHayes.jpg" alt="Portrait of Alexander L. Hayes" style="border-radius: 45%; display: block; margin: auto; padding-top: 2em; padding-bottom: 2em;"/></div>
+    <div class="col-md-12"><img class="img-responsive" src="/img/AlexanderLHayes.jpg" alt="Portrait of Alexander L. Hayes" style="border-radius: 45%; display: block; margin: auto; padding-top: 2em; padding-bottom: 2em;"/></div>
   </div>
 
   <div class="row">
