Adding several more css elements to make the cv cleaner, and updating the cv with additional information.

--- a/cv/index.html
+++ b/cv/index.html
@@ -5,7 +5,7 @@ description: Curriculum Vitae (CV) for Alexander L. Hayes
 ---
 
 <h1>{{ site.title }}</h1>
-<p class="cv"><span class="obfuscate">ude.sallad@seyaH.rednaxelA | ten.reylftab@rednaxela</span></p>
+<p class="cv"><span class="obfuscate">ude.salladtu@seyaH.rednaxelA | ten.reylftab@rednaxela</span></p>
 <p class="cv">Department of Computer Science<br>
   Erik Jonsson School of Engineering & Computer Science<br>
   The University of Texas at Dallas<br>
@@ -13,10 +13,10 @@ description: Curriculum Vitae (CV) for Alexander L. Hayes
   Richardson, TX 75080 USA
 </p>
 
-<h2>Technical Skills</h2>
+<h2 class="cvheading">Technical Skills</h2>
 <p class="cv">Python, Shell Scripting, Linux/Unix, C, Racket/Scheme, Git</p>
 
-<h2>Education</h2>
+<h2 class="cvheading">Education</h2>
 <ul class="cv">
   <li><b>Doctor of Philosophy (Ph.D.) Computer Science</b><br>
     Erik Jonnson School of Engineering & Computer Science<br>
@@ -29,9 +29,67 @@ description: Curriculum Vitae (CV) for Alexander L. Hayes
   </li>
 </ul>
 
-<h2>Experience</h2>
+<h2 class="cvheading">Experience</h2>
+<p class="cv">
+  <b style="font-size: 1.2em;">Teaching Assistant</b>
+  <div class="cv condensed">
+    August 2017 &mdash; Present<br>
+    The University of Texas at Dallas, Richardson, TX<br><br>
+  </div>
+  <ul class="cv">
+    <li>Fall 2017 &ndash; Automata Theory &ndash; 4384.001</li>
+    <li>Duties included grading assignments and exams, preparing and verifying automata examples before lectures, and providing additional help to students outside of lectures.</li>
+  </ul>
+</p>
 
-<h2>Publications</h2>
+<p class="cv">
+  <b style="font-size: 1.2em;">Undergraduate Researcher, STARAI Lab</b>
+  <div class="cv condensed">
+    July 2016 &mdash; July 2017<br>
+    Indiana University, Bloomington, IN<br><br>
+  </div>
+  <ul class="cv">
+    <li>Explored gradient-boosting and relational approaches to natural language processing, primarily with respect to SEC S-1 financial documents.</li>
+    <li>Authored <i>"User Friendly Automatic Construction of Background Knowledge: Mode Construction from ER Diagrams"</i>, in which we showed that ILP modes could be set based on how objects in an entity-relational diagram were related.</li>
+    <li>Part of the initial public GitHub release of the lab's source code, distributed as <a href="https://github.com/boost-starai/BoostSRL">BoostSRL.</a> Afterwards I maintained the <a href="https://github.com/boost-starai/BoostSRL/wiki/">BoostSRL Wiki</a> and core documentation.</li>
+  </ul>
+</p>
+
+<p class="cv">
+  <b style="font-size: 1.2em;">Undergraduate Researcher, ProHealth REU</b>
+  <div class="cv condensed">
+    May 2016 &mdash; July 2017<br>
+    Indiana University, Bloomington, IN<br><br>
+  </div>
+  <ul class="cv">
+    <li>The inaugural year of the ProHealth REU site brought together ten students to learn about research methods and investigate five projects.</li>
+    <li>Our team focused on predicting drug-drug interactions: common or rare side effects that occur when a person takes multiple medications.</li>
+    <li>This work built on previous research that previously inferred adverse side effects of medications from text mined from the web.</li>
+  </ul>
+  <div class="row">
+    <div class="col-sm-6" style="text-align: center"><a href="https://raw.githubusercontent.com/batflyer/DrugInteractionDiscovery/master/Overview/Poster/Drug-Drug%20Interactions%20Poster.png"><img src="https://raw.githubusercontent.com/batflyer/DrugInteractionDiscovery/master/Overview/Poster/Drug-Drug%20Interactions%20Poster.png" alt="Poster" class="img-responsive"></a></div>
+    <div class="col-sm-6 img-responsive">
+
+      <!-- https://github.com/lepture/github-cards "The Unofficial GitHub cards"-->
+      <div class="github-card" data-github="batflyer/DrugInteractionDiscovery" data-width="400" data-height="229" data-theme="default"></div>
+      <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+      
+    </div>
+  </div>
+</p>
+
+<p class="cv">
+  <b style="font-size: 1.2em;">Resident Assistant, McNutt Quad</b>
+  <div class="cv condensed">
+    December 2015 &mdash; August 2016<br>
+    Indiana University, Bloomington, IN<br><br>
+  </div>
+  <ul class="cv">
+    <li></li>
+  </ul>
+</p>
+
+<h2 class="cvheading">Publications</h2>
 <ol class="cv">
   <li>Alexander L. Hayes, Mayukh Das, Phillip Odom, and Sriraam Natarajan. 2017. <i>User Friendly Automatic Construction of Background Knowledge: Mode Construction from ER Diagrams</i>. Knowledge Capture Conference (K-CAP '17). December 4-6, 2017, Austin, TX, USA. DOI:https://doi.org/10.1145/3148011.3148027</li>
 </ol>
