Fixing a problem with how code was displayed in the blog posts. CV should be up to date. css now imports Roboto from Google fonts api.

--- a/cv/index.html
+++ b/cv/index.html
@@ -14,7 +14,7 @@ description: Curriculum Vitae (CV) for Alexander L. Hayes
 </p>
 
 <h2 class="cvheading">Technical Skills</h2>
-<p class="cv">Python, Shell Scripting, Linux/Unix, C, Racket/Scheme, Git</p>
+<p class="cv">Python, Shell Scripting, Linux/Unix, C, Racket, Git</p>
 
 <h2 class="cvheading">Education</h2>
 <ul class="cv">
@@ -76,17 +76,6 @@ description: Curriculum Vitae (CV) for Alexander L. Hayes
       
     </div>
   </div>
-</p>
-
-<p class="cv">
-  <b style="font-size: 1.2em;">Resident Assistant, McNutt Quad</b>
-  <div class="cv condensed">
-    December 2015 &mdash; August 2016<br>
-    Indiana University, Bloomington, IN<br><br>
-  </div>
-  <ul class="cv">
-    <li></li>
-  </ul>
 </p>
 
 <h2 class="cvheading">Publications</h2>
