Added the summer camp position to my cv page.

--- a/cv/index.html
+++ b/cv/index.html
@@ -56,6 +56,18 @@ description: Curriculum Vitae (CV) for Alexander L. Hayes
 </p>
 
 <p class="cv">
+  <b style="font-size: 1.2em;">Camp Counselor, SICE Summer Camp</b>
+  <div class="cv condensed">
+    2014, 2015, 2016, 2017<br>
+    Indiana University, Bloomington, IN<br><br>
+  </div>
+  <ul class="cv">
+    <li>2015, 2015; Evening Counselor: Introduced high school campers to the IU campus, navigated them between their sessions, and led evening activities.</li>
+    <li>2016, 2017; Daytime Counselor: Led sessions on introductory programming with Scratch, Python programming, Raspberry Pi, information security, and data analytics.</li>
+  </ul>
+</p>
+
+<p class="cv">
   <b style="font-size: 1.2em;">Undergraduate Researcher, ProHealth REU</b>
   <div class="cv condensed">
     May 2016 &mdash; July 2017<br>
