--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@ description: Homepage for Alexander L. Hayes, Computer Science PhD Student focus
   <div class="row">
     <div class="col-md-12">
       <p>Computer Science Ph.D. Student at The University of Texas at Dallas, advised by <a href="http://utdallas.edu/~sxn177430/">Professor Sriraam Natarajan</a>. My interests are in machine learning and its applications; as well as systems, open-source development, and theory of computation. I believe that open development and explainable decision-making systems are great starting points for building trust in artificial intelligence.</p>
-      <h3>Updates</h3>
+      <script src="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.min.js"></script>
+	<link rel="stylesheet" href="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.css" />
+	    <!-- Prepare a container for your calendar. -->
+<div class="calendar">
+    <!-- Loading stuff -->
+    Loading the data just for you.
+</div>
+
+<script>
+    GitHubCalendar(".calendar", "batflyer");
+</script>
+	    
+	<h3>Updates</h3>
       <ul>
 	<li>This semester I am a teaching assistant for Automata Theory.</li>
 	<li><i>"User Friendly Automatic Construction of Background Knowledge"</i> was accepted to Knowledge Capture Conference (K-CAP '17).</li>
