--- a/publications/index.html
+++ b/publications/index.html
@@ -13,5 +13,6 @@ description: Alexander L. Hayes' publications.
 <h1 style="padding-bottom: 0.4em;">Publications</h1>
 
 <ol>
-  <li class="publication-entry">Alexander L. Hayes, Mayukh Das, Phillip Odom, and Sriraam Natarajan. 2017. <i>User Friendly Automatic Construction of Background Knowledge: Mode Construction from ER Diagrams</i>. Knowledge Capture Conference (K-CAP '17). December 4-6, 2017, Austin, TX, USA. DOI:https://doi.org/10.1145/3148011.3148027</li>
+  <li class="publication-entry">Alexander L. Hayes, Mayukh Das, Phillip Odom, and Sriraam Natarajan. 2017. <i>User Friendly Automatic Construction of Background Knowledge: Mode Construction from ER Diagrams</i>. Knowledge Capture Conference (K-CAP '17). December 4-6, 2017, Austin, TX, USA. DOI:<a href="https://doi.org/10.1145/3148011.3148027">https://doi.org/10.1145/3148011.3148027</a></li>
+
 </ol>
