--- a/punchcards/index.html
+++ b/punchcards/index.html
@@ -4,7 +4,6 @@ title: Punchcards | Alexander L. Hayes
 description: Various things I keep track of.
 ---
 
-
 <script src="https://d3js.org/d3.v4.min.js"></script>
 
 <script>
@@ -54,7 +53,7 @@ svg.append("g")
   .enter().append("path")
     .attr("d", pathMonth);
 
-d3.csv("LabHours.csv", function(error, csv) {
+d3.csv("https://gist.githubusercontent.com/batflyer/6b4c82b78e039ad47cad338fe0bbce53/raw/LabTimes.csv", function(error, csv) {
   if (error) throw error;
 
   var data = d3.nest()
