Tweaking the home-page and adding a teaching page. Tweaking the default.html layout to navigate to the teaching page.

--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 ---
 layout: default
 title: Alexander L. Hayes
-description: Homepage for Alexander L. Hayes, Computer Science PhD Student focusing on Machine Learning.
+description: Homepage for Alexander L. Hayes, Computer Science PhD Student at The University of Texas at Dallas focusing on Machine Learning.
 ---
 
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-12"><img class="img-responsive" src="/img/AlexanderLHayes.jpg" alt="Portrait of Alexander L. Hayes" style="border-radius: 45%; display: block; margin: auto; padding-top: 2em; padding-bottom: 2em;"/></div>
   </div>
-  
+
   <div class="row">
     <div class="col-md-12">
-      <p>Computer Science Ph.D. Student at The University of Texas at Dallas, advised by <a href="http://utdallas.edu/~sxn177430/">Professor Sriraam Natarajan</a>. My interests are in machine learning and its applications; as well as systems, open-source development, and theory of computation. I believe that open development and explainable decision-making systems are great starting points for building trust in artificial intelligence.</p>
+      <p>Computer Science Ph.D. Student with the <a href="https://starling.utdallas.edu/">StARLinG Lab</a> at The University of Texas at Dallas. Advised by Professors <a href="http://utdallas.edu/~sxn177430/">Sriraam Natarajan</a> and <a href="https://gkunapuli.github.io">Gautam Kunapuli</a>. My interests are in Statistical Relational AI, Systems, Open-Source Development, and Theory of Computation. I believe that open development and explainable decision-making systems are great starting points for building trust in artificial intelligence.</p>
       <h3>Updates</h3>
       <ul>
-	<li><i>"User Friendly Automatic Construction of Background Knowledge"</i> was accepted to Knowledge Capture Conference (K-CAP '17).</li>
+        <li>Fall 2018: I will be a Teaching Assistant for <i>Automata Theory</i> (CS 4384.001)</li>
       </ul>
     </div>
   </div>
