--- a/teaching/index.html
+++ b/teaching/index.html
@@ -9,3 +9,7 @@ description: Teaching resources and examples.
 <h2>Office Hours</h2>
 
 <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;showTabs=0&amp;mode=WEEK&amp;height=400&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=webmartian.com_e1fv1tmamc67lpfnfogh9uss6c%40group.calendar.google.com&amp;color=%23691426&amp;ctz=America%2FChicago" style="border-width:0" width="800" height="400" frameborder="0" scrolling="no"></iframe>
+
+<h2>Automata Theory</h2>
+
+<a href="automata_latex">Automata LaTeX Cheatsheet</a>
