--- a/talks/managing-research/slides.html
+++ b/talks/managing-research/slides.html
@@ -129,7 +129,7 @@ will need to **manage data**
 
 <div class="container">
 <div class="col">
-<img style="max-height: 300px;" class="plain" src="https://datamgmt.iu.edu/img/thermo_b.png"/>
+<img style="max-height: 300px;" class="plain" src="images/thermo.png"/>
 </div>
 
 <div class="col">
